Fixes section title overlap with back button in certain sizes

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -374,7 +374,7 @@ a {
     }
 
     & h3 {
-        margin: 0;
+        margin: 0 0.5em;
         text-align: center;
     }
 
